--- a/catalog.html
+++ b/catalog.html
@@ -123,91 +123,139 @@
         </section>
             </div>
         <section class="catalog">
-            <ul class="catalog-list">
-                    <li class="catalog-item">
-                            <h3 class="catalog-item-title">Малинка</h3>
-                            <img class="catalog-item-image" src="image\card\raspberry.jpg" width="168" height="168" alt="Малинка">
-                            <p class="catalog-description">Сливочное мороженое с малиновым джемом</p>
-                            <b class="price">310 ₽/кг</b>
-                            <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>    
-                    </li>
-                    <li class="catalog-item">
-                        <h3 class="catalog-item-title">Фисташка</h3>
-                        <img class="catalog-item-image" src="image\card\pistachio.jpg" width="168" height="168" alt="Фисташка">
-                        <p class="catalog-description"> Фисташковый пломбир с кусочками шоколада</p>
-                        <b class="price">340 ₽/кг</b>
-                        <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
-                    </li>
-                <li class="catalog-item">
-                    <h3 class="catalog-item-title">Черника</h3>
-                    <img class="catalog-item-image" src="image\card\blueberry.jpg" width="168" height="168" alt="Черника">
-                    <p class="catalog-description">Крем-брюле с черничным джемом </p>
-                    <b class="price">330 ₽/кг</b>
-                    <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
-            </li>
+          <ul class="catalog-list">
             <li class="catalog-item">
-                <h3 class="catalog-item-title">Бабл-гам</h3>
-                <img class="catalog-item-image" src="image\card\buble-gum.jpg" width="168" height="168" alt="Бабл-гам">
-                <p class="catalog-description">Ванильный пломбир со сладкой посыпкой</p>
+                <img class="catalog-item-image" src="image\card\raspberry.jpg" width="168" height="168" alt="Малинка">
+                <div class="catalog-card-content">  
+                  <h3 class="catalog-item-title">Малинка</h3>
+                  <p class="catalog-description">Сливочное мороженое с малиновым джемом</p>
+                  <div class="catalog-footer">
+                    <b class="price">310 ₽/кг</b>
+                    <a class="add-to-cart-button" href="#"><span class="visually-hidden">В корзину</span><img src="image/icons/cart.svg" alt="В корзину."></a>
+                  </div>
+                </div>
+                </li>
+          <li class="catalog-item">
+            <img class="catalog-item-image" src="image\card\pistachio.jpg" width="168" height="168" alt="Фисташка">
+            <div class="catalog-card-content">
+              <h3 class="catalog-item-title">Фисташка</h3>
+              <p class="catalog-description">Фисташковый пломбир с кусочками шоколада</p>
+              <div class="catalog-footer">
+               <b class="price">340 ₽/кг</b>
+                <a class="add-to-cart-button" href="#"><span class="visually-hidden">В корзину</span><img src="image/icons/cart.svg" alt="В корзину."></a>
+              </div>
+            </div>
+          </li>
+          <li class="catalog-item">
+            <img class="catalog-item-image" src="image\card\blueberry.jpg" width="168" height="168" alt="Черника">
+            <div class="catalog-card-content">
+              <h3 class="catalog-item-title">Черника</h3>
+              <p class="catalog-description">Крем-брюле с черничным джемом</p>
+              <div class="catalog-footer">
+                <b class="price">330 ₽/кг</b>
+                <a class="add-to-cart-button" href="#"><span class="visually-hidden">В корзину</span><img src="image/icons/cart.svg" alt="В корзину."></a>
+              </div>
+            </div>
+          </li>
+          <li class="catalog-item">
+            <img class="catalog-item-image" src="image\card\buble-gum.jpg" width="168" height="168" alt="Бабл-гам">
+            <div class="catalog-card-content">
+              <h3 class="catalog-item-title">Бабл-гам</h3>
+              <p class="catalog-description">Ванильный пломбир со сладкой посыпкой</p>
+              <div class="catalog-footer">
                 <b class="price">320 ₽/кг</b>
-                <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
-            </li>
+                <a class="add-to-cart-button" href="#"><span class="visually-hidden">В корзину</span><img src="image/icons/cart.svg" alt="В корзину."></a>
+              </div>
+            </div>
+          </li>
         <li class="catalog-item">
-            <h3 class="catalog-item-title">Ежевика</h3>
             <img class="catalog-item-image" src="image\card\blackberry.jpg" width="168" height="168" alt="Ежевика">
-            <p class="catalog-description">Сливочное мороженое с ежевичным джемом</p>
-            <b class="price">330 ₽/кг</b>
-            <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
-        </li>
+              <div class="catalog-card-content">
+                <h3 class="catalog-item-title">Ежевика</h3>
+                <p class="catalog-description">Сливочное мороженое с ежевичным джемом</p>
+                <div class="catalog-footer">
+                  <b class="price">330 ₽/кг</b>
+                  <a class="add-to-cart-button" href="#"><span class="visually-hidden">В корзину</span><img src="image/icons/cart.svg" alt="В корзину."></a>
+                </div>
+              </div>
+          </li>
     <li class="catalog-item">
-        <h3 class="catalog-item-title">Банан</h3>
         <img class="catalog-item-image" src="image\card\banana.jpg" width="168" height="168" alt="Банан">
-        <p class="catalog-description">Сливочный пломбир с банановым вкусом</p>
-        <b class="price">340 ₽/кг</b>
-        <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
-    </li>
+        <div class="catalog-card-content">
+          <h3 class="catalog-item-title">Банан</h3>
+          <p class="catalog-description">Сливочный пломбир с банановым вкусом</p>
+        <div class="catalog-footer">
+          <b class="price">340 ₽/кг</b>
+          <a class="add-to-cart-button" href="#"><span class="visually-hidden">В корзину</span><img src="image/icons/cart.svg" alt="В корзину."></a>
+        </div>
+        </div>
+      </li>
     <li class="catalog-item">
-        <h3 class="catalog-item-title">Шоколадка</h3>
         <img class="catalog-item-image" src="image\card\chocolate.jpg" width="168" height="168" alt="Шоколадка">
-        <p class="catalog-description">Классический шоколадный пломбир</p>
-        <b class="price">270 ₽/кг</b>
-        <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
-    </li>
+        <div class="catalog-card-content">
+          <h3 class="catalog-item-title">Шоколадка</h3>
+          <p class="catalog-description">Классический шоколадный пломбир</p>
+        <div class="catalog-footer">
+          <b class="price">270 ₽/кг</b>
+          <a class="add-to-cart-button" href="#"><span class="visually-hidden">В корзину</span><img src="image/icons/cart.svg" alt="В корзину."></a>
+        </div>
+        </div>
+      </li>
     <li class="catalog-item">
-        <h3 class="catalog-item-title">Клубничка</h3>
-        <img class="catalog-item-image" src="image\card\strawberry.jpg" width="168" height="168" alt="Клубничка">
-        <p class="catalog-description">Сливочный пломбир с клубничным вкусом</p>
-        <b class="price">300 ₽/кг</b>
-        <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
-    </li>
+       <img class="catalog-item-image" src="image\card\strawberry.jpg" width="168" height="168" alt="Клубничка">
+       <div class="catalog-card-content">
+          <h3 class="catalog-item-title">Клубничка</h3>
+          <p class="catalog-description">Сливочный пломбир с клубничным вкусом</p>
+        <div class="catalog-footer">
+          <b class="price">300 ₽/кг</b>
+          <a class="add-to-cart-button" href="#"><span class="visually-hidden">В корзину</span><img src="image/icons/cart.svg" alt="В корзину."></a>
+        </div>
+        </div>
+      </li>
     <li class="catalog-item">
-        <h3 class="catalog-item-title">Лимон</h3>
         <img class="catalog-item-image" src="image\card\lemon.jpg" width="168" height="168" alt="Лимон">
-        <p class="catalog-description">Освежающий лимонный сорбет</p>
-        <b class="price">310 ₽/кг</b>
-        <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
-    </li>
+        <div class="catalog-card-content">
+          <h3 class="catalog-item-title">Лимон</h3>
+          <p class="catalog-description">Освежающий лимонный сорбет</p>
+       <div class="catalog-footer">
+          <b class="price">310 ₽/кг</b>
+          <a class="add-to-cart-button" href="#"><span class="visually-hidden">В корзину</span><img src="image/icons/cart.svg" alt="В корзину."></a>
+        </div>
+        </div>
+      </li>
     <li class="catalog-item">
-        <h3 class="catalog-item-title">Ментол</h3>
         <img class="catalog-item-image" src="image\card\menthol.jpg" width="168" height="168" alt="Ментол">
-        <p class="catalog-description">Сливочный пломбир с ментоловым сиропом</p>
-        <b class="price">310 ₽/кг</b>
-        <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
-    </li>
+        <div class="catalog-card-content">
+          <h3 class="catalog-item-title">Ментол</h3>
+          <p class="catalog-description">Сливочный пломбир с ментоловым сиропом</p>
+        <div class="catalog-footer">
+          <b class="price">310 ₽/кг</b>
+          <a class="add-to-cart-button" href="#"><span class="visually-hidden">В корзину</span><img src="image/icons/cart.svg" alt="В корзину."></a>
+        </div>
+        </div>
+      </li>
     <li class="catalog-item">
-        <h3 class="catalog-item-title">Орешек</h3>
         <img class="catalog-item-image" src="image\card\nut.jpg" width="168" height="168" alt="Орешек">
-        <p class="catalog-description">Фисташковый пломбир с шоколадным сиропом</p>
+          <div class="catalog-card-content">
+           <h3 class="catalog-item-title">Орешек</h3>
+            <p class="catalog-description">Фисташковый пломбир с шоколадным сиропом</p>
+      <div class="catalog-footer">
         <b class="price">360 ₽/кг</b>
-        <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
-    </li>
-              <li class="catalog-item">
-                  <h3 class="catalog-item-title">Крем-брюле</h3>
-                  <img class="catalog-item-image" src="image\card\creme_brulee.jpg" width="168" height="168" alt="Крем-брюле">
-                  <p class="catalog-description">Классическое крем-брюле</p>
-                  <b class="price">310 ₽/кг</b>
-                  <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
-              </li>
+        <a class="add-to-cart-button" href="#"><span class="visually-hidden">В корзину</span><img src="image/icons/cart.svg" alt="В корзину."></a>
+      </div>
+      </div>
+      </li>
+        <li class="catalog-item">
+          <img class="catalog-item-image" src="image\card\creme_brulee.jpg" width="168" height="168" alt="Крем-брюле">
+          <div class="catalog-card-content">
+            <h3 class="catalog-item-title">Крем-брюле</h3>
+            <p class="catalog-description">Классическое крем-брюле</p>
+          <div class="catalog-footer">
+            <b class="price">310 ₽/кг</b>
+            <a class="add-to-cart-button" href="#"><span class="visually-hidden">В корзину</span><img src="image/icons/cart.svg" alt="В корзину."></a>
+          </div>
+          </div>
+          </li>
       </ul>
     </section>
             <div class="pagination-container">
