--- a/index.html
+++ b/index.html
@@ -109,93 +109,129 @@
   </section>
     <h2 class="gifts-presents">Заказывайте мороженое<br> и получайте подарки!</h2>
     <div class="index-colums">
-      <section class="gifts rasberry">
-        <h3 class="gift-title">Малинка даром!</h3>
-        <p class="gift-description">При покупке 2 кг любого фруктового мороженого добавим в ваш заказ банку малинового варенья бесплатно.</p>
-        <a class="button button-all" href="#">Хочу подарок</a>
+      <section class="gifts">
+          <div class="gifts-container">
+            <h3 class="gift-title">Малинка даром!</h3>
+            <p class="gift-description">При покупке 2 кг любого фруктового мороженого добавим в ваш заказ банку малинового варенья бесплатно.</p>
+            <a class="button button-gift" href="#">Хочу подарок</a>
+          </div>
+          <img class="rasberry" src="image/rasberry.jpg" alt="Малина в вафельном рожке." width="219" height="268">
       </section>
-      <section class="gifts marshmellow">
-        <h3 class="gift-title">Маршмеллоу даром!</h3>
-        <p class="gift-description"> При покупке 2 кг пломбира добавим в ваш заказ упаковку нежных зефирок совершенно бесплатно.</p>
-        <a class="button button-all" href="#">Хочу подарок</a>
+      <section class="gifts">
+        <div class="gifts-container">
+          <h3 class="gift-title">Маршмеллоу даром!</h3>
+          <p class="gift-description"> При покупке 2 кг пломбира добавим в ваш заказ упаковку нежных зефирок совершенно бесплатно.</p>
+          <a class="button button-gift" href="#">Хочу подарок</a>
+        </div>
+      <img class="marshmellow" src="image/marshmellow.jpg" alt="Маршмеллоу в вафельном рожке." width="219" height="268">
       </section>
     </div>
   <section class="catalog-popular">
-    <h2 class="catalog-popular-title">Попробуйте самые популярные вкусы нашего мороженого</h2>
-    <ul class="catalog-popular-list">
-        <li class="catalog-list">
-          <h3 class="catalog-item-title">Малинка</h3>
-          <img class="catalog-item-image" src="image\card\raspberry.jpg" width="168" height="168" alt="Малинка">
-          <p class="catalog-description">Сливочное мороженое с малиновым джемом</p>
-          <b class="price">310 ₽/кг</b>
-          <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
-        </li>
-      <li class="catalog-list">
-        <h3 class="catalog-item-title">Фисташка</h3>
-        <img class="catalog-item-image" src="image\card\pistachio.jpg" width="168" height="168" alt="Фисташка">
-        <p class="catalog-description">Фисташковый пломбир с кусочками шоколада</p>
-        <b class="price">340 ₽/кг</b>
-        <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
+    <h2 class="catalog-title-popular">Попробуйте самые популярные вкусы нашего мороженого</h2>
+    <ul class="catalog-list-popular">
+        <li class="catalog-item-popular">
+            <img class="catalog-item-image-popular" src="image\card\raspberry.jpg" width="168" height="168" alt="Малинка">
+            <div class="catalog-card-content-popular">  
+              <h3 class="catalog-item-title-popular">Малинка</h3>
+              <p class="catalog-description-popular">Сливочное мороженое с малиновым джемом</p>
+              <div class="catalog-footer-popular">
+                <b class="price-popular">310 ₽/кг</b>
+                <a class="add-to-cart-button-popular" href="#"><span class="visually-hidden">В корзину</span><img src="image/icons/cart.svg" alt="В корзину."></a>
+              </div>
+            </div>
+            </li>
+      <li class="catalog-item-popular">
+        <img class="catalog-item-image-popular" src="image\card\pistachio.jpg" width="168" height="168" alt="Фисташка">
+        <div class="catalog-card-content-popular">
+          <h3 class="catalog-item-title-popular">Фисташка</h3>
+          <p class="catalog-description-popular">Фисташковый пломбир с кусочками шоколада</p>
+          <div class="catalog-footer-popular">
+           <b class="price-popular">340 ₽/кг</b>
+            <a class="add-to-cart-button-popular" href="#"><span class="visually-hidden">В корзину</span><img src="image/icons/cart.svg" alt="В корзину."></a>
+          </div>
+        </div>
       </li>
-      <li class="catalog-list">
-        <h3 class="catalog-item-title">Черника</h3>
-        <img class="catalog-item-image" src="image\card\blueberry.jpg" width="168" height="168" alt="Черника">
-        <p class="catalog-description">Крем-брюле с черничным джемом</p>
-        <b class="price">330 ₽/кг</b>
-        <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
+      <li class="catalog-item-popular">
+        <img class="catalog-item-image-popular" src="image\card\blueberry.jpg" width="168" height="168" alt="Черника">
+        <div class="catalog-card-content-popular">
+          <h3 class="catalog-item-title-popular">Черника</h3>
+          <p class="catalog-description-popular">Крем-брюле с черничным джемом</p>
+          <div class="catalog-footer-popular">
+            <b class="price-popular">330 ₽/кг</b>
+            <a class="add-to-cart-button-popular" href="#"><span class="visually-hidden">В корзину</span><img src="image/icons/cart.svg" alt="В корзину."></a>
+          </div>
+        </div>
       </li>
-      <li class="catalog-list">
-        <h3 class="catalog-item-title">Бабл-гам</h3>
-        <img class="catalog-item-image" src="image\card\buble-gum.jpg" width="168" height="168" alt="Бабл-гам">
-        <p class="catalog-description">Ванильный пломбир со сладкой посыпкой</p>
-        <b class="price">320 ₽/кг</b>
-        <a class="add-to-cart-button button" href="#"><span class="visually-hidden">В корзину</span><img src=""></a>
+      <li class="catalog-item-popular">
+        <img class="catalog-item-image-popular" src="image\card\buble-gum.jpg" width="168" height="168" alt="Бабл-гам">
+        <div class="catalog-card-content-popular">
+          <h3 class="catalog-item-title-popular">Бабл-гам</h3>
+          <p class="catalog-description-popular">Ванильный пломбир со сладкой посыпкой</p>
+          <div class="catalog-footer-popular">
+            <b class="price-popular">320 ₽/кг</b>
+            <a class="add-to-cart-button-popular" href="#"><span class="visually-hidden">В корзину</span><img src="image/icons/cart.svg" alt="В корзину."></a>
+          </div>
+        </div>
       </li>
     </ul>
   </section>
   <section class="benefits">
-  <h2 class="benefits-title">Магазин Глейси – это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
-  <ul class="benefits-list">
-    <li class="benefit-one">Всё наше мороженое изготавливается на собственном производстве с использованием современного оборудования и проверенных временем технологий.</li>
-    <li class="benefit-two">Для приготовления мороженого используются сливки и молоко высочайшего качества. Все ингредиенты и добавки произведены из натурального сырья.</li>
-    <li class="benefit-three">Закупка ингредиентов производится только у проверенных фермерских хозяйств, с которыми нас связывает долговременное сотрудничество.</li>
-    <li class="benefit-four">Доставка нашего мороженого осуществляется в специальном термопаке, который не даёт мороженому растаять и позволяет сохранить превосходный вкус.</li>
-  </ul>
+    <h2 class="benefits-title">Магазин Глейси – это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
+    <ul class="benefits-list">
+      <li class="benefit-one">Всё наше мороженое изготавливается на собственном производстве с использованием современного оборудования и проверенных временем технологий.</li>
+      <li class="benefit-two">Для приготовления мороженого используются сливки и молоко высочайшего качества. Все ингредиенты и добавки произведены из натурального сырья.</li>
+      <li class="benefit-three">Закупка ингредиентов производится только у проверенных фермерских хозяйств, с которыми нас связывает долговременное сотрудничество.</li>
+      <li class="benefit-four">Доставка нашего мороженого осуществляется в специальном термопаке, который не даёт мороженому растаять и позволяет сохранить превосходный вкус.</li>
+    </ul>
   </section>
   <section class="news">
     <article class="update">
       <p class="update-news">Новое в нашем блоге</p>
-      <a class="update-link" href="#">10 способов сервировки фруктовых щербетов к столу</a>
+      <a class="update-link" href="#">10 способов сервировки<br> фруктовых щербетов<br> к столу</a>
     </article>
     <article class="subscribe">
+      <div class="subscribe-container">
       <p class="subscribe-description">Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
       <form class="subscribe-form" method="post" action="https://echo.htmlacademy.ru/">
-        <input type="email" placeholder="email@example.com">
+        <input class="email-field" type="email" placeholder="email@example.com">
         <button class="form-button" type="submit">Подписаться</button>
+      </div>
       </form>
     </article> 
   </section>
   <section class="delivery">
-    <div class="delivery-container">
+    <div class="delivery-info-container">
   <h2 class="delivery-title">Доставка любимого мороженого на дом</h2>
   <p class="delivery-description">Хочется полакомиться любимым десертом, но нет времени съездить в магазин? Закажите доставку мороженого на дом, и курьер привезёт вам ваш заказ в течение часа!</p>
-    </div>
-  <form class="delivery-form" method="post" action="https://echo.htmlacademy.ru/">
-    <p class="delivery-conformation">Укажите адрес и дату доставки, и мы свяжемся с вами, чтобы подтвердить заказ.</p>
-    <p class="delivery-date">
-      <label for="date">Дата</label>
-      <input type="date" name="date" placeholder="01.04.2020" id="date">
-    </p>
-    <p class="delivery-phone">
-      <label for="phone">Телефон</label>
-      <input type="text" name="phone" placeholder="+7 800 999-00-00" id="phone">
-    </p>
-    <p class="delivery-address">
-      <label for="address">Адрес</label>
-      <input type="text" name="address" placeholder="ул. Большая Конюшенная, 8/19" id="address">
-    </p>
-    <button class="form-button" type="submit">Отправить</button>
-  </form>
+    </div> 
+    <div class="delivery-container">
+      <p class="delivery-conformation">Укажите адрес и дату доставки, и мы свяжемся с вами, чтобы подтвердить заказ.</p>
+        <form class="delivery-form" method="post" action="https://echo.htmlacademy.ru/"> 
+          <p class="field-group delivery-date">
+            <label for="date">
+              Дата
+              <button class="info">
+                <span class="visually-hidden">Посмотреть дополнительную информацию</span>
+              </button>
+            </label>
+            <input class="field" type="text" name="date" placeholder="01.04.2020" id="date">
+          </p>
+          <p class="field-group delivery-phone">
+            <label for="phone">Телефон</label>
+            <input class="field" type="text" name="phone" placeholder="+7 800 999-00-00" id="phone">
+          </p>
+          <p class="field-group delivery-address">
+            <label for="address">
+              Адрес
+              <button class="info">
+                <span class="visually-hidden">Посмотреть дополнительную информацию</span>
+              </button>
+            </label>
+            <input class="field" type="text" name="address" placeholder="ул. Большая Конюшенная, 8/19" id="address">
+          </p>
+          <button class="form-button" type="submit">Отправить</button>
+        </form>
+     </div>
   </section>
   <section class="contacts">
     <div class="contacts-container">
